Building backend file saving schema

--- a/01_MainNotebooks/06_update_sponsors.ipynb
+++ b/01_MainNotebooks/06_update_sponsors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 57,
    "id": "e7aec68f-2be8-494a-b006-dd046f01e5f0",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 58,
    "id": "879bb05c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 59,
    "id": "f962cdda",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 60,
    "id": "e2b2f78f-7de8-49c2-a2bb-237b58a37670",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 61,
    "id": "7c50eb17-9a28-477f-a299-eaf49af3efdd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 62,
    "id": "caa44250-e151-4ca1-9ae5-59f06977ab17",
    "metadata": {},
    "outputs": [],
@@ -249,14 +249,12 @@
     "    # Pause for API politness before returning None and continuing\n",
     "   \n",
     "   \n",
-    "    return None\n",
-    "\n",
-    "   "
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 63,
    "id": "14bd5a73",
    "metadata": {},
    "outputs": [],
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "6773c65c",
    "metadata": {},
    "outputs": [
@@ -292,27 +290,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 187 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251110_intermediate_events.csv \n",
-      "✅ 186 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251108_event_sponsors.csv \n",
+      "✅ 188 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251119_intermediate_events.csv \n",
+      "✅ 188 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251119_event_sponsors.csv \n",
       "--- 🟢 Commencing Sponsor Scrape 🟢---\n",
-      "Processing Event: 1/27 (ID: 3066)    \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "Obtained Raw Sponsors API Data for 3066\n",
-      "Obtained Raw Sponsors API Data for 3191\n",
-      "\n",
-      "--- 🏓 Found new Ball Sponsor for Event ID: 3191 🏓---\n",
       "Obtained Raw Sponsors API Data for 2591\n",
       "Obtained Raw Sponsors API Data for 2537\n",
-      "Processing Event: 27/27 (ID: 2234)    \n",
+      "Processing Event: 26/26 (ID: 2234)    \n",
       "--- ✅ Scraping complete. Consolidating results... ---\n",
-      "--- Found 4 events with new sponsor data. ---\n",
-      "--- Combining 4 new sponsor records with existing data... ---\n",
-      "--- 🟢 Successfully saved 187 total sponsored events to ../Data/Processed/Sponsors/20251110_event_sponsors.csv 🟢---\n"
+      "--- Found 3 events with new sponsor data. ---\n",
+      "--- Combining 3 new sponsor records with existing data... ---\n",
+      "--- 🟢 Successfully saved 188 total sponsored events to ../Data/Processed/Sponsors/20251119_event_sponsors.csv 🟢---\n"
      ]
     }
    ],
@@ -444,6 +432,8 @@
     "        new_sponsor_df = new_sponsor_df.set_index(\"eventId\")\n",
     "        combined_df = new_sponsor_df.combine_first(event_sponsors_df)\n",
     "        final_sponsors_df = combined_df.reset_index()\n",
+    "        final_sponsors_df = pd.merge(final_sponsors_df, intermediate_events_df[[\"eventId\", \"eventName\"]], \n",
+    "        how=\"left\", on=\"eventId\")\n",
     "\n",
     "        try:\n",
     "            date_string = now_date_str\n",
