building out data pages on streamlit app

--- a/01_MainNotebooks/05_clean_events_list.ipynb
+++ b/01_MainNotebooks/05_clean_events_list.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdaf4b1f-c28f-4258-a71b-da94f73d4d94",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'clean_events' from 'utils.cleanEvents' (/home/mdannegarn/table_tennis_stats/utils/cleanEvents.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m project_root \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m      9\u001b[39m     sys.path.append(project_root)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcleanEvents\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m filter_by_payloads, clean_events\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'clean_events' from 'utils.cleanEvents' (/home/mdannegarn/table_tennis_stats/utils/cleanEvents.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -34,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e40f80bd-c73e-4af9-a8a4-4b9ffa9ddc7f",
    "metadata": {},
    "outputs": [],
@@ -88,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d772c8b-3e2e-41a3-877b-deed6d48355c",
    "metadata": {},
    "outputs": [
@@ -96,11 +84,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 🟠 Filtering Events By Payloads 🟠 ---\n",
+      "--- 🟠 Filtering Events By Payloads 🟠 ---\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "--- ✅ Found 187 events with valid payloads ---\n",
+      "--- ✅ Found 189 events with valid payloads ---\n",
       "--- ✅ Resolved 3 duplicate event names by adding month and year.\n",
-      "--- ✅ Intermediate Events File saved to ../Data/Processed/Events/Intermediate/20251116_intermediate_events.csv\n"
+      "--- ✅ Intermediate Events File saved to ../Data/Processed/Events/Intermediate/20251125_intermediate_events.csv\n"
      ]
     }
    ],
