--- a/01_MainNotebooks/06_update_sponsors.ipynb
+++ b/01_MainNotebooks/06_update_sponsors.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "e7aec68f-2be8-494a-b006-dd046f01e5f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[148]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgetLatestFiles\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_latest_sponsors_data\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'utils'"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
@@ -15,12 +29,17 @@
     "from typing import List, Union,  Optional\n",
     "import re\n",
     "from datetime import datetime\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "from utils.getLatestFiles import get_latest_sponsors_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 141,
    "id": "879bb05c",
    "metadata": {},
    "outputs": [],
@@ -49,62 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "f962cdda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_latest_event_sponsor(event_sponsor_dir:str, event_sponsor_regex) -> Optional[pd.DataFrame]:\n",
-    "    \"\"\"\n",
-    "    Parses specified directory for events files in format yyyy_mm_dd. \n",
-    "    Attempts to read latest file in this format. \n",
-    "\n",
-    "    Args:\n",
-    "        directory (str): The folder where the event_sponsor files are stored (e.g., '../Data/Events/Intermediate').\n",
-    "        filename_pattern (str): The pattern to match (e.g., '*_event_sponsor.csv').\n",
-    "\n",
-    "    Returns:\n",
-    "        Optional[pd.DataFrame]: The DataFrame of the latest file, or None if no files are found or reading fails.\n",
-    "    \"\"\"\n",
-    "    if not os.path.isdir(event_sponsor_dir):\n",
-    "        print (f\"❌{event_sponsor_dir} does not exist as a directory\")\n",
-    "        return pd.DataFrame(columns=MINIMAL_EVENT_COLUMNS)   \n",
-    "    \n",
-    "    # Get csv files in \n",
-    "    files = glob.glob(f\"{event_sponsor_dir}/*.csv\")\n",
-    "   \n",
-    "\n",
-    "    event_sponsor_files = []\n",
-    "    \n",
-    "    if not files:\n",
-    "        print(f\"❌ No existing *.csv files found in EVENTS_SPONSORS  Directory: {event_sponsor_dir} \")\n",
-    "        return pd.DataFrame(columns=MINIMAL_EVENT_COLUMNS), None  \n",
-    "\n",
-    "    for file in files:\n",
-    "        filename = os.path.basename(file)\n",
-    "       \n",
-    "        if re.match(event_sponsor_regex,filename):\n",
-    "           event_sponsor_files.append(file)\n",
-    "\n",
-    "    if not event_sponsor_files:\n",
-    "        print(f\"❌ No existing EVENTS_SPONSORS files in format: {event_sponsor_regex} in {event_sponsor_dir}\")\n",
-    "        return pd.DataFrame(columns=MINIMAL_EVENT_COLUMNS)   \n",
-    "    event_sponsor_files.sort()    \n",
-    "    latest_event_sponsor = event_sponsor_files[-1]\n",
-    "\n",
-    "    try: \n",
-    "        latest_event_sponsor_df = pd.read_csv(latest_event_sponsor)\n",
-    "        print(f\"✅ {len(latest_event_sponsor_df)} events found in latest EVENTS_SPONSORS: {latest_event_sponsor} \")\n",
-    "        return latest_event_sponsor_df, latest_event_sponsor\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        print (f\"❌ Error reading lastest EVENTS_SPONSORS, {file}: {e}\")\n",
-    "        return pd.DataFrame(columns=MINIMAL_EVENT_COLUMNS), None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 143,
    "id": "e2b2f78f-7de8-49c2-a2bb-237b58a37670",
    "metadata": {},
    "outputs": [],
@@ -159,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 144,
    "id": "7c50eb17-9a28-477f-a299-eaf49af3efdd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 145,
    "id": "caa44250-e151-4ca1-9ae5-59f06977ab17",
    "metadata": {},
    "outputs": [],
@@ -254,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 146,
    "id": "14bd5a73",
    "metadata": {},
    "outputs": [],
@@ -282,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "id": "6773c65c",
    "metadata": {},
    "outputs": [
@@ -290,17 +254,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 188 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251119_intermediate_events.csv \n",
-      "✅ 188 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251119_event_sponsors.csv \n",
+      "✅ 189 events found in latest INTERMEDIATE: ../Data/Processed/Events/Intermediate/20251125_intermediate_events.csv \n",
+      "✅ 189 events found in latest EVENTS_SPONSORS: ../Data/Processed/Sponsors/20251125_event_sponsors.csv \n",
       "--- 🟢 Commencing Sponsor Scrape 🟢---\n",
-      "Obtained Raw Sponsors API Data for 3066\n",
-      "Obtained Raw Sponsors API Data for 2591\n",
-      "Obtained Raw Sponsors API Data for 2537\n",
-      "Processing Event: 26/26 (ID: 2234)    \n",
-      "--- ✅ Scraping complete. Consolidating results... ---\n",
-      "--- Found 3 events with new sponsor data. ---\n",
-      "--- Combining 3 new sponsor records with existing data... ---\n",
-      "--- 🟢 Successfully saved 188 total sponsored events to ../Data/Processed/Sponsors/20251119_event_sponsors.csv 🟢---\n"
+      "No new events to scrape\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mdannegarn/table_tennis_stats/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -321,6 +295,13 @@
     "    if event_sponsors_df.empty:\n",
     "        print (\"❌ FAILURE: Missing event sponsor data\")\n",
     "        sys.exit(1)\n",
+    "    event_sponsors_df.drop(\n",
+    "    labels=[\"EventName\"],  \n",
+    "    axis=1,                                 \n",
+    "    inplace=True, \n",
+    "    errors = \"ignore\"                           \n",
+    ")\n",
+    "\n",
     "\n",
     "    latest_sponsors_date_str = os.path.basename(event_sponsors_file).split(\"_\")[0]\n",
     "    latest_sponsors_date = pd.to_datetime(latest_sponsors_date_str)\n",
@@ -328,25 +309,7 @@
     "    existing_sponsor_ids = event_sponsors_df[\"eventId\"].to_list()\n",
     "    new_sponsor_mask = intermediate_df[\"eventId\"].isin(existing_sponsor_ids)\n",
     "    new_ids = intermediate_df[~new_sponsor_mask][\"eventId\"].tolist()\n",
-    "   \n",
-    "   \n",
-    "        \n",
-    "    # get IDS which can still be scraped if info is available!\n",
-    "    missing_ball_ids = get_missing_sponsor_ids(event_sponsors_df,\"BallSponsor\") + new_ids\n",
-    "    missing_ball_set = set(missing_ball_ids)\n",
-    "\n",
-    "    missing_table_ids = get_missing_sponsor_ids(event_sponsors_df,\"TableSponsor\") + new_ids\n",
-    "    missing_table_set = set(missing_table_ids)\n",
-    "\n",
-    "    intermediate_df[\"StartDate\"] = pd.to_datetime(intermediate_df[\"StartDate\"])\n",
-    "    unupdated_events_filter = intermediate_df[\"StartDate\"] > latest_sponsors_date\n",
-    "    unupdated_ids = intermediate_df[unupdated_events_filter][\"eventId\"].tolist()\n",
-    "\n",
-    "    ids_to_scrape = missing_ball_set.union(missing_table_set)\n",
-    "    # ids_to_scrape = [event_id for event_id in ids_to_scrape if event_id in unupdated_ids]\n",
-    "    ids_to_scrape = set(ids_to_scrape).union(new_ids)\n",
-    "    ids_to_scrape = list(ids_to_scrape)\n",
-    "\n",
+    "    ids_to_scrape = new_ids\n",
     "    \n",
     "\n",
     "    \n",
@@ -365,6 +328,9 @@
     "        print(f\"FATAL: Could not load sponsor map files. {e}\")\n",
     "        sys.exit(1)\n",
     "\n",
+    "    if not ids_to_scrape:\n",
+    "        print (\"No new events to scrape\")\n",
+    "        sys.exit(0)\n",
     "\n",
     "    for i, event_id in enumerate(ids_to_scrape):\n",
     "    \n",
@@ -391,8 +357,8 @@
     "        ball_sponsor_name = map_sponsor_name(ball_sponsor_row, LINKS_MAP_FILE, LOGOS_MAP_FILE)\n",
     "        table_sponsor_name = map_sponsor_name(table_sponsor_row, LINKS_MAP_FILE, LOGOS_MAP_FILE)\n",
     "\n",
-    "        found_new_ball = ball_sponsor_name and (event_id in missing_ball_set)\n",
-    "        found_new_table = table_sponsor_name and (event_id in missing_table_set)\n",
+    "        found_new_ball = ball_sponsor_name \n",
+    "        found_new_table = table_sponsor_name \n",
     "\n",
     "        # Only proceed if we found at least one *new* piece of data\n",
     "        if found_new_ball or found_new_table:            \n",
@@ -431,9 +397,9 @@
     "        event_sponsors_df = event_sponsors_df.set_index(\"eventId\")\n",
     "        new_sponsor_df = new_sponsor_df.set_index(\"eventId\")\n",
     "        combined_df = new_sponsor_df.combine_first(event_sponsors_df)\n",
-    "        final_sponsors_df = combined_df.reset_index()\n",
-    "        final_sponsors_df = pd.merge(final_sponsors_df, intermediate_events_df[[\"eventId\", \"eventName\"]], \n",
-    "        how=\"left\", on=\"eventId\")\n",
+    "        final_sponsors_df = combined_df.reset_index()        \n",
+    "        final_sponsors_df = pd.merge(final_sponsors_df, intermediate_df[[\"eventId\", \"EventName\"]], \n",
+    "                                     how=\"left\", on=\"eventId\")\n",
     "\n",
     "        try:\n",
     "            date_string = now_date_str\n",
@@ -449,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6001165f",
+   "id": "a3bc61f7",
    "metadata": {},
    "outputs": [],
    "source": []
