--- a/01_MainNotebooks/08_get_match_details.ipynb
+++ b/01_MainNotebooks/08_get_match_details.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "6b289dee",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "b2bc0118",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "81958106",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "35d87592",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "f2217cc1",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "513ebc5c",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "fa5cc26b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "0886baa0",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "76f38044",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "edda540a",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "b60e57f6",
    "metadata": {},
    "outputs": [
@@ -486,12 +486,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 187 events found in latest MASTER: ../Data/Master/Events/20251110__master_events.csv \n",
-      "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n",
-      "--- ✅ All desired payloads: Found 24665 total unique matches to scrape. ---\n",
+      "✅ 186 events found in latest MASTER: ../Data/Master/Events/20251108__master_events.csv \n",
+      "--- 🟠 Finding  all event ids and payloads from ../Data/Processed/Singles_match_payloads ---\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- ✅ All desired payloads: Found 24920 total unique matches to scrape. ---\n",
       "--- 🟠 Finding already obtained match details from ../Data/Raw/Match_details ---\n",
-      "--- ✅ Found 24665 total unique match details across 187 files. ---\n",
-      "--- ✅ Unique Events with Data: 187 ---\n",
+      "--- ✅ Found 24920 total unique match details across 189 files. ---\n",
+      "--- ✅ Unique Events with Data: 189 ---\n",
       "\n",
       "🏓 Matches to scrape: 0 across 0 events 🏓\n",
       "\n",
